feat: v0.0.3 - hooks infrastructure and task workflow simplification
- Add pre-compaction sync hook with configurable token threshold
- Rewrite smart context guard with pending reads tracking
- Add plan review hook requiring plan-reviewer before exit
- Add shared helpers module for hooks (lib/config.py)
- Add required-context-files.yaml for centralized config
- Add plan, plan-reviewer, implementation-reviewer agents
- Simplify task workflow: remove TASK-###.yaml and plan.md templates
- Plans now managed by Claude Code in .claude/plans/
- Add new config options for review toggles and pre-compaction sync

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .DS_Store
 tests
 __pycache__
+
+# Meridian runtime flags
+.meridian/.pending-context-reads
+.meridian/.pre-compaction-synced
+.meridian/.needs-context-review
+.meridian/.plan-review-blocked
