feat: context injection and planning improvements
Context injection:
- SessionStart hooks now inject context via additionalContext
- Files wrapped in XML tags with header/footer
- post-compact-guard simplified to acknowledgment check
- Removes need for agent to manually Read files

Planning improvements:
- Plans must not contain code/pseudocode (WHAT/WHY not HOW)
- Plan agent returns "don't summarize" instruction
- Added plan preservation guidance to agent manual

Other:
- Absolute paths for implementation-reviewer output
- Updated tests for new context injection approach

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ __pycache__
 .meridian/.pre-compaction-synced
 .meridian/.needs-context-review
 .meridian/.plan-review-blocked
+.meridian/.pre-compaction-sync.log
