feat: v0.0.7 - user docs, CLAUDE_PROJECT_DIR enforcement
Added:
- user_provided_docs section in required-context-files.yaml (injected first)
- Auto-approve cp from ~/.claude/plans/ for plan archival
- Task creation reminder to copy plan from ~/.claude/plans/

Changed:
- All hooks/scripts require CLAUDE_PROJECT_DIR (no cwd fallbacks)
- Pre-compaction sync removes flag when tokens drop below threshold
- Cleaner context injection (removed `=` separator lines)

Removed:
- relevant-docs.md (use user_provided_docs instead)

--- a/.meridian/required-context-files.yaml
+++ b/.meridian/required-context-files.yaml
@@ -1,12 +1,21 @@
-# Files that must always be read at session start or after compaction.
-# The smart blocker will ensure all these files are read before allowing other tools.
+# Files that are automatically injected into the agent's context at session start.
+# These files are wrapped in XML tags and included in the conversation.
 
-# Always required
+# Always injected (in this order)
 core:
   - .meridian/memory.jsonl
   - .meridian/task-backlog.yaml
   - .meridian/CODE_GUIDE.md
   - .meridian/prompts/agent-operating-manual.md
+
+# User-provided docs - add any files here to include them in the agent's context.
+# These are injected FIRST, before memory and other core files.
+# Example:
+#   - docs/architecture.md
+#   - docs/api-reference.md
+user_provided_docs:
+  # - docs/architecture.md
+  # - docs/api-reference.md
 
 # Conditional based on project_type in config.yaml
 # hackathon -> CODE_GUIDE_ADDON_HACKATHON.md
