feat: v0.0.8 - code reviewer, CLAUDE.md writer skill, path guard, plan mode tracking
Added:
- Code reviewer agent for line-by-line review of all changes
- CLAUDE.md writer skill with hierarchical injection guidance
- Plan mode tracker hook (UserPromptSubmit) to prompt planning skill
- Path guard hook to block .meridian/.claude writes outside project root
- Session cleanup hook for state file cleanup
- Completeness reviewer type for implementation-reviewer
- Human actions docs workflow in pre-stop hook
- Dependency management and CI failure handling in agent manual
- Testing strategy section in planning skill

Changed:
- Multi-reviewer strategy: phase + integration + completeness + code reviewers
- Subagent limits relaxed for thorough exploration/review
- Fixed 7 "never without alternatives" violations
- Memory-curator scripts now use auto-detected project root

Removed:
- TDD addon (testing guidance moved to planning skill)

--- a/.meridian/config.yaml
+++ b/.meridian/config.yaml
@@ -6,10 +6,6 @@
 # - production  → use CODE_GUIDE_ADDON_PRODUCTION.md
 project_type: standard
 
-# Optional: Test-Driven Development mode.
-# When true, inject CODE_GUIDE_ADDON_TDD.md and follow its rules.
-tdd_mode: false
-
 # Plan review: require plan-reviewer agent before exiting plan mode.
 # When false, ExitPlanMode proceeds without review.
 plan_review_enabled: true
@@ -24,3 +20,14 @@ pre_compaction_sync_enabled: true
 
 # Token threshold for pre-compaction sync warning (default: 150000).
 pre_compaction_sync_threshold: 144000
+
+# Sibling repositories for cross-repo context.
+# Paths relative to project root or absolute.
+sibling_repos: []
+# Example:
+#   - name: backend-api
+#     path: ../backend
+#     description: "API server - endpoints, data models"
+#   - name: ios-app
+#     path: ../ios
+#     description: "iOS implementation - reference for features"
