--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ __pycache__
 .meridian/.needs-context-review
 .meridian/.plan-review-blocked
 .meridian/.pre-compaction-sync.log
+.meridian/.plan-mode-state
+.meridian/.active-task-files
