--- a/.meridian/config.yaml
+++ b/.meridian/config.yaml
@@ -46,3 +46,9 @@ beads_enabled: false
 # tool calls occurred since the user's last input. Prevents interruption
 # on quick/simple tasks. Set to 0 to always run stop hook.
 stop_hook_min_actions: 20
+
+# Periodic reminder interval: Inject a short reminder about key behaviors
+# every N user messages. Helps maintain focus during long sessions.
+# Resets on session start (startup, compaction, clear).
+# Set to 0 to disable.
+reminder_interval: 5
